# farm-bot

./: .gitignore  README.md  plan.md  pyproject.toml
config/: default.yaml
src/game_watcher/: __init__.py  config_model.py  logging_setup.py  main.py  state_ machine.py
src/game_watcher/capture/: __init__.py  base.py  dxcam_capture.py  mss_capture.py
src/game_watcher/command/: __init__.py  command.py
src/game_watcher/debug/: artifacts.py
src/game_watcher/vision/: debug.py  matcher.py  preprocess.py  templates.py  trigger_gate.py
src/game_watcher/windowing/: __init__.py
tests/: test_config_load.py
